# VFX-UsdAssetResolver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  docs.bat  docs.sh  install.md  rdo_build.sh  setup.sh
.github/scripts/: houdini.py  houdini_build.bat  houdini_build.sh  maya.py  maya_build.bat  maya_build.sh  standalone.py  standalone_build.bat  standalone_build.sh
.github/workflows/: build_houdini.py  build_houdini.yml  build_maya.yml  build_standalone.yml  cache_cleanup.yml  mdbook.yml  sidefx.py
cmake/defaults/: setBoostNamespace.cmake
docs/: book.toml
docs/src/: PythonResolver.md  Resolvers.md  SUMMARY.md  overview.md
docs/src/installation/: automatic_install.md  building.md  overview.md  prerequisites.md  requirements.md
docs/src/resolvers/: overview.md  production.md  proofofconcept.md  rnd.md  shared_features.md
docs/src/resolvers/CachedResolver/: PythonAPI.md  example.md  overview.md
docs/src/resolvers/ExampleSetup/: overview.md
docs/src/resolvers/FileResolver/: FileResolver.md  PythonAPI.md  overview.md
docs/src/resolvers/HttpResolver/: overview.md
docs/src/resolvers/PythonResolver/: PythonAPI.md  PythonResolver.md  overview.md
docs/src/tutorials/: overview.md
docs/src/tutorials/ExampleSetup/: overview.md
docs/theme/ext/css/: custom.css
files/: box.usda  cylinder.usda  testPinning.usda
files/generic/: cylinder.usda
files/generic/workspace/shots/shotA/: shotA.usd  shotA_mapping.usd
files/implementations/CachedResolver/code/: PythonExpose.py
files/implementations/CachedResolver/workspace/assets/assetA/: assetA_v001.usd  assetA_v002.usd
files/implementations/CachedResolver/workspace/assets/assetA/elements/: model_v001.usd  model_v002.usd  surface_v001.usd  surface_v002.usd
files/implementations/CachedResolver/workspace/shots/shotA/: shotA_mapping.usd  shotA_v001.usd  shotA_v002.usd
files/workspace/assets/assetA/: assetA_v001.usd  assetA_v002.usd
files/workspace/shots/shotA/: shotA.usd  shotA_mapping.usd
src/: api.h  moduleDeps.cpp  plugInfo.json.in  resolver.cpp  resolver.h  resolverContext.h  wrapResolverContext.cpp
src/CachedResolver/: CMakeLists.txt  PythonExpose.py  api.h  debugCodes.cpp  debugCodes.h  initializer.py  moduleDeps.cpp  plugInfo.json.in  resolver.cpp  resolver.h  resolverContext.cpp  resolverContext.h  resolverTokens.cpp  resolverTokens.h  wrapResolver.cpp  wrapResolverContext.cpp  wrapResolverTokens.cpp
src/CachedResolver/testenv/: testCachedResolver.py  testFileResolver.py
src/FileResolver/: CMakeLists.txt  FileResolver.cmake  MyPythonClass.py  api.h  debugCodes.cpp  debugCodes.h  module.cpp  moduleDeps.cpp  plugInfo.json.in  resolver.cpp  resolver.h  resolverContext.cpp  resolverContext.h  resolverTokens.cpp  resolverTokens.h  testPinning.usda  testResolve.cpp  tokens.cpp  tokens.h  wrapResolver.cpp  wrapResolverContext.cpp  wrapResolverTokens.cpp
src/FileResolver/testenv/: testFileResolver.py
src/HttpResolver/wrap/: CMakeLists.txt  plugInfo.json.in  server.sh  server_install.bat  server_install.sh  server_launch.bat  server_launch.sh
src/HybridResolver/: CMakeLists.txt  PythonExpose.py  debugCodes.cpp  moduleDeps.cpp  resolver.cpp  resolver.h  resolverContext.cpp  wrapResolver.cpp  wrapResolverContext.cpp
src/PythonResolver/: CMakeLists.txt  PythonExpose.py  PythonResolver.cmake  api.h  debugCodes.cpp  debugCodes.h  moduleDeps.cpp  plugInfo.json.in  resolver.cpp  resolver.h  resolverContext.cpp  resolverContext.h  resolverTokens.cpp  resolverTokens.h  testResolve.cpp  wrapResolver.cpp  wrapResolverContext.cpp  wrapResolverTokens.cpp
src/PythonResolver/testenv/: testPythonResolver.py
src/hybridResolver/: CMakeLists.txt  __init__.py  api.h  debugCodes.h  module.cpp  resolverContext.h  resolverTokens.h
src/utils/: boost_include_wrapper.h
tools/: debug.py  update_manager.py
